[package]
name = "family-center-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server"
path = "src/main.rs"

[dependencies]
# Web framework
poem = { version = "3.1.12", features = ["static-files"] }
poem-openapi = { version = "5.1.16", features = ["scalar", "uuid", "chrono"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Database
sqlx = { features = [
  "runtime-tokio",
  "tls-rustls",
  "postgres",
  "uuid",
  "chrono",
  "json",
  "derive",
  "sqlx-toml",
], git = "https://github.com/launchbadge/sqlx" }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Config/env
dotenvy = "0.15"

# UUID
uuid = { version = "1", features = ["v4", "serde"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Error handling
anyhow = "1"
thiserror = "1"

# Tracing/logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# JWT
jsonwebtoken = "9"

# HTTP client (for Google API)
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }

# OAuth2
oauth2 = "4"

# URL parsing
url = "2"

# Async trait
async-trait = "0.1"

[dev-dependencies]
tokio-test = "0.4"
